pruefungsunterlagen/counter_kand/k8/counter-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/isaaclins/counter-backend:v1
          imagePullPolicy: Always
