pruefungsunterlagen/counter_kand/k8/counter-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend-deployment
  labels:
    app: counter-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/isaaclins/counter-frontend:v1
          ports:
            - containerPort: 3000
