pruefungsunterlagen/counter_kand/k8/counter-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
spec:
  selector:
    app: counter-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
